回退到1.0.16版本

--- a/cfg/download.cfg
+++ b/cfg/download.cfg
@@ -182,7 +182,7 @@ bt.sub_file_max_num=3
 bt.max_cur_downloading_size=524288000
 emule.enable_bt_download=1
 emule.udp_socket_port=4661
-emule.userid=pgcFsosOYF0qsj9LZzFvtA==
+emule.userid=5wn3WUwOOAR5HvAPg0hvgA==
 emule.nickname=[CHN]shaohan
 emule.enable_thunder_tag=0
 emule.enable_server=1
@@ -195,13 +195,13 @@ upload_manager.max_files=5
 upload_manager.max_idle_interval=2000
 upload_manager.max_unchoke_pipes=5
 upload_manager.max_choke_pipes=50
-upload_stat.begin_time=1426600800
-upload_stat.end_time=1426672800
-upload_stat.up_duration=70893
+upload_stat.begin_time=0
+upload_stat.end_time=0
+upload_stat.up_duration=0
 upload_stat.up_use_duration=0
 upload_stat.up_pipe_num=0
 upload_stat.up_passive_pipe_num=0
-upload_stat.up_data_bytes=0
+upload_stat.up_data_bytes=
 upload_manager_box.enable_upload=1
 upload_manager_box.enable_upload_when_download=0
 upload_manager_box.up_speed_limit_max=40
@@ -212,26 +212,11 @@ res_query.max_query_shub_retry_count=2
 license.report_interval=3600
 license.expire_time=3600
 fs.use_fdatasync=0
-system.enable_limit_speed=1
 system.hardwareid=
-ptl_setting.ping_timeout=300000
-ftp_data_pipe.receive_ranges_number=1
-res_query._bonus_res_num=20
-relation_config.support_file_suffix_list=.apk
-connect_manager.cdn_res_num=6
-speedup_cdn_controller.start_interval=5
-speedup_cdn_controller.open_interval=10
-speedup_cdn_controller.high_speed=5
-p2p.http_encap_state=1
-p2p.http_encap_test_count=0
-bt_magnet.torrent_host=bt.box.n0808.com
-bt.min_bt_accelerate_file_size=0
-emule.enable_p2sp=1
 upload_manager.enable_upload=0
 upload_manager.enable_upload_when_download=1
 upload_manager.speed_limit_in_charge=10
 upload_manager.speed_limit_in_lock=10
 upload_manager.speed_limit_in_download=10
 upload_manager.lower_limit_charge=20
-bt_magnet.torrent_hos=106.187.99.210
-drm.xv_file_head_len=2097152
+bt_magnet.torrent_host=bt.box.n0808.com
